src/BadScript.Tests/tests/passing/types/function/arguments/all_04.bs
r = false
function f(y, !?x)
{
	r = x == 2
}

f(1,2)

return r