src/BadScript.Tests/tests/failing/invalid-syntax/invalidBrackets_03.bs
function f(x) { }

f(1